--- a/development/scss/setting/_size.scss
+++ b/development/scss/setting/_size.scss
@@ -4,4 +4,4 @@
 $baseFontsize: 16;
 
 //ブレイクポイント //////////////////////////////
-$mq-breakpoints: ("xs": 320px, "sp": 480px, "tab": 600px, "pc" : 1025px, "full": 1100px);
+$mq-breakpoints: ("xs": 480px, "sp": 600px, "tab": 960px, "pc": 1100px);
