--- a/development/scss/base/_base.scss
+++ b/development/scss/base/_base.scss
@@ -2,10 +2,11 @@
 /* base */
 /************************************************/
 body {
-	overflow-x: hidden;
-	color: $baseFont-color;
-	font-family: $fontFamily;
 	animation: fadein 1s forwards;
+	background-color: $bg_color;
+	color: $fontcolor_main;
+	font-family: $fontfamily_txt;
+	overflow-x: hidden;
 }
 
 @keyframes fadein {
@@ -19,7 +20,9 @@ body {
 }
 
 img {
-	width: 100%;
+	font-family: "object-fit: cover;"; /*IE対策*/
 	height: auto;
+	object-fit: cover;
 	vertical-align: bottom;
+	width: 100%;
 }
