--- a/development/scss/layout/_layout.scss
+++ b/development/scss/layout/_layout.scss
@@ -1,2 +1,162 @@
 /* layoutModule */
 /************************************************/
+// メイン
+.ly_main {
+	@include maxmq(sp) {
+		padding: 0 20px;
+	}
+	margin: 0 auto;
+	max-width: 1160px;
+	padding: 0 30px;
+}
+
+// FV
+.ly_fv {
+	@include maxmq(sp) {
+		padding: 20px 20px 0 20px;
+	}
+	margin: 0 calc(50% - 50vw);
+	padding: 50px 50px 0 50px;
+	position: relative;
+	width: 100vw;
+}
+
+.ly_fvBg {
+	align-items: center;
+	background-image: url(../../../public/assets/img/fv/fv.jpg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	display: flex;
+	// height: 850px;
+	position: relative;
+	// padding-top: calc(850 / 1700 * 100%);
+	width: 100%;
+}
+
+.ly_logo {
+	align-items: center;
+	background-color: #fff;
+	display: flex;
+	height: 211px;
+	@include z-index(logo);
+	@include maxmq(sp) {
+		height: 116px;
+		left: -20px;
+		position: absolute;
+		top: -20px;
+		width: 116px;
+	}
+	justify-content: center;
+	left: -50px;
+	position: absolute;
+	top: -50px;
+	width: 211px;
+}
+
+// ハンバーガーボタン
+.ly_hamburgerbtn {
+	align-items: center;
+	background-color: #444;
+	display: flex;
+	height: 120px;
+	@include maxmq(sp) {
+		height: 70px;
+		width: 70px;
+	}
+	@include z-index(hamburgerIcon);
+	justify-content: center;
+	pointer-events: none;
+	position: fixed;
+	right: 0;
+	top: 0;
+	width: 120px;
+}
+
+
+// ヘッダー
+.ly_header {
+	background: #fff;
+	display: none;
+	left: 0;
+	position: fixed;
+	top: 0;
+	width: 100%;
+}
+.ly_header.is_open {
+	@include z-index(header);
+}
+
+.ly_header_inner {
+	align-items: center;
+	display: flex;
+	justify-content: center;
+}
+.ly_header_inner::before {
+	background-image: url(../../../public/assets/img/bg/bg1-1.png);
+	content: "";
+	height: 900px;
+	left: -600px;
+	position: absolute;
+	top: -300px;
+	width: 980px;
+}
+.ly_header_inner::after {
+	background-image: url(../../../public/assets/img/bg/bg1-2.png);
+	bottom: -300px;
+	content: "";
+	height: 900px;
+	@include z-index(bg);
+	position: absolute;
+	right: -500px;
+	width: 980px;
+}
+
+// TOP
+.ly_top {
+	@include maxmq(tab) {
+		padding: 80px 0;
+	}
+	padding: 140px 0;
+}
+
+.ly_top_wrap {
+	display: flex;
+	@include maxmq(tab) {
+		align-items: center;
+		flex-direction: column;
+		justify-content: center;
+		width: 100%;
+	}
+	position: relative;
+}
+
+// cmponent
+.ly_cmponent_wrapper {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.ly_cmponent_block {
+	width: 45%;
+}
+
+.ly_cmponent_block:not(:last-of-type) {
+	margin-left: auto;
+}
+
+.ly_cmponent_block:nth-of-type(even) {
+	margin: -150px 0 0 0;
+}
+
+.ly_cmponent_block:last-of-type {
+	margin-top: -250px;
+}
+
+
+// about
+.ly_about {
+	margin: 0 auto;
+	max-width: 1700px;
+	padding: 0 30px;
+}
