--- a/development/scss/setting/_color.scss
+++ b/development/scss/setting/_color.scss
@@ -1,27 +1,11 @@
-// カラー設定
-
 // テキストカラー //////////////////////////////
 // 基本テキストカラー
-$baseFont-color: #333;
-// 装飾フォントカラー
-$whiteFont-color: #fff;
-
+$fontcolor_main: #444;
+$fontcolor_accent: #e6aa37;
 
 // 背景 //////////////////////////////
-$bg-color: #f0f0f0;
-//フッター背景
-$footer-color: #525252;
-// オーバーレイ
-$overray-color: rgba(#222, .6);
-
-
-// ハンバーガーアイコン //////////////////////////////
-$hamburgerIcon-color: #fff;
-// ハンバーガーアイコンテキスト
-$hamburgerFont-color: #fff;
-// ハンバーガーメニュー背景
-$hamburgerBg-color: rgba(#222, .95);
-
+$bg_color: #fff;
 
 // ボタン //////////////////////////////
-$btn-color: #000;
+$btn_color: #000;
+$btn_cv: #e6aa37;
