--- a/development/scss/setting/_z-index.scss
+++ b/development/scss/setting/_z-index.scss
@@ -1,10 +1,11 @@
 // z-index
 $layer: (
     modal : 1000,
-    overlay : 100,
-    hamburgerIcon : 30,
+    hamburgerIcon : 100,
     header : 20,
-    default : 1
+    logo : 10,
+    default : 1,
+    bg : -1
 );
 // 呼び出し時
 // @include z-index(modal);
