--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2434,7 +2434,12 @@ body.is_scrollRock {
 }
 
 .el_footer_icon {
+  transition: opacity .2s;
   width: 48.8px;
+}
+
+.el_footer_icon:hover {
+  opacity: .7;
 }
 
 .el_copy {
