section単位のスクロールフェード

--- a/development/scss/style.scss
+++ b/development/scss/style.scss
@@ -39,6 +39,7 @@
 @import "module/question";
 @import "module/recommendation";
 @import "module/footer";
+@import "module/scrollFade";
 
 
 // helper：補助スタイル  （hp_）
