--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1855,7 +1855,7 @@ body.is_scrollRock {
 @media screen and (max-width: 960px) {
   .bl_cmponent_list {
     margin: 0 auto;
-    width: 60%;
+    width: 75%;
   }
 }
 
@@ -1902,6 +1902,7 @@ body.is_scrollRock {
 
 @media screen and (max-width: 960px) {
   .el_cmponent_discription {
+    font-size: 0.75rem;
     margin-top: 20px;
   }
 }
@@ -1917,7 +1918,7 @@ body.is_scrollRock {
 @media screen and (max-width: 960px) {
   .ly_slider {
     display: block;
-    height: 500px;
+    height: 700px;
     width: 100%;
   }
   .ly_carousel_container {
@@ -1964,6 +1965,18 @@ body.is_scrollRock {
   }
   .ly_cmponent_block {
     display: none;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .ly_slider {
+    height: 600px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .ly_slider {
+    height: 500px;
   }
 }
 
