--- a/development/scss/layout/_ly_cv.scss
+++ b/development/scss/layout/_ly_cv.scss
@@ -26,6 +26,7 @@
 	@include maxmq(tab) {
 		align-items: center;
 		flex-direction: column;
+		padding: 10px;
 	}
 	justify-content: space-between;
 }
