--- a/development/scss/module/_influence.scss
+++ b/development/scss/module/_influence.scss
@@ -65,6 +65,11 @@
 	text-align: center;
 }
 
+
+.influence_gradient {
+	text-align: center;
+}
+
 .bl_influence_wrapper {
 	background-image: url(../../../public/assets/img/Influence/influence_bg.jpg);
 	margin-top: 102px;
