--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -137,6 +137,7 @@ img {
   align-items: center;
   display: flex;
   justify-content: center;
+  padding: 100px 0;
 }
 
 .ly_header_inner::before {
@@ -158,6 +159,21 @@ img {
   position: absolute;
   right: -500px;
   width: 980px;
+}
+
+.ly_modal_flex {
+  display: flex;
+  flex-direction: column;
+}
+
+.ly_header_cv_btn {
+  display: flex;
+}
+
+@media screen and (max-width: 600px) {
+  .ly_header_cv_btn {
+    flex-direction: column;
+  }
 }
 
 .ly_top {
@@ -543,12 +559,13 @@ body.is_scrollRock {
 }
 
 .bl_header_nav {
+  margin-bottom: 100px;
   width: 571px;
   z-index: 30;
 }
 
 .bl_header_logo {
-  margin: 0 auto 134px;
+  margin: 0 auto 90px;
   width: 180px;
 }
 
