--- a/development/scss/module/_header.scss
+++ b/development/scss/module/_header.scss
@@ -60,6 +60,9 @@ body.is_scrollRock {
 }
 
 .bl_header_nav {
+	@include maxmq(sp) {
+		margin-bottom: 80px;
+	}
 	margin-bottom: 100px;
 	width: 571px;
 	z-index: 30;
@@ -67,7 +70,7 @@ body.is_scrollRock {
 
 .bl_header_logo {
 	@include maxmq(sp) {
-		margin: 0 auto 74px;
+		margin: 0 auto 70px;
 	}
 	margin: 0 auto 90px;
 	width: 180px;
