--- a/development/scss/module/_influence.scss
+++ b/development/scss/module/_influence.scss
@@ -13,21 +13,22 @@
 }
 
 .el_influence_ttl {
-	font-size: rem(24);
-	margin-top: 307px;
+	@include maxmq(sp) {
+		margin: 140px auto 0;
+		width: 280px;
+	}
+	margin: 307px auto 0;
 	text-align: center;
+	width: 337px;
 }
 .bl_influence_block {
-	align-items: flex-end;
-	display: flex;
 	@include maxmq(tab) {
-		align-items: flex-end;
-		flex-direction: column;
 		margin: 60px auto 0;
-		width: 300px;
+		width: 266px;
 	}
-	justify-content: center;
+	margin: 0 auto;
 	margin-top: 90.5px;
+	width: 743px;
 }
 
 .el_influence_span {
@@ -53,16 +54,12 @@
 }
 
 .el_influence_subttl {
-	font-size: rem(32);
-	font-weight: 900;
 	@include maxmq(sp) {
-		font-size: rem(28);
-		text-align: center;
-		width: 100%;
+		width: 266px;
 	}
-	line-height: calc(39 / 25);
+	margin: 0 auto;
 	margin-top: 42px;
-	text-align: center;
+	width: 539px;
 }
 
 
@@ -75,12 +72,13 @@
 	margin-top: 102px;
 	padding: 200px 250px 0;
 	@media screen and (max-width: 1600px) {
+		margin-top: 52px;
 		padding: 150px 50px 0;
 	}
 }
 #influence .bl_influence_wrapper {
 	@include maxmq(sp) {
-		padding: 138px 30px 50px;
+		padding: 100px 30px 50px;
 	}
 }
 
@@ -135,53 +133,61 @@
 }
 
 .el_influence_point_ttl {
-	font-size: rem(32);
-	@include maxmq(tab) {
-		font-size: rem(26);
-		text-align: center;
-	}
 	@include maxmq(sp) {
-		font-size: 6vw;
-		text-align: center;
+		margin-bottom: 32px;
+		width: 304px;
 	}
-	line-height: calc(52 / 35);
-	position: relative;
+	margin-bottom: 43px;
+	width: 473px;
 }
+// 	font-size: rem(32);
+// 	@include maxmq(tab) {
+// 		font-size: rem(26);
+// 		text-align: center;
+// 	}
+// 	@include maxmq(sp) {
+// 		font-size: 6vw;
+// 		text-align: center;
+// 	}
+// 	line-height: calc(52 / 35);
+// 	position: relative;
+// }
 
-.bl_influence_container .el_influence_point_ttl::before {
-	background-repeat: no-repeat;
-	background-size: contain;
-	content: "";
-	height: 152px;
-	left: -70px;
-	position: absolute;
-	top: -100px;
-	width: 230px;
-	@media screen and (max-width: 1600px) {
-		left: 0;
-		top: -100px;
-	}
-}
+// .bl_influence_container .el_influence_point_ttl::before {
+// 	background-repeat: no-repeat;
+// 	background-size: contain;
+// 	content: "";
+// 	height: 152px;
+// 	left: -70px;
+// 	position: absolute;
+// 	top: -100px;
+// 	width: 230px;
+// 	@media screen and (max-width: 1600px) {
+// 		left: 0;
+// 		top: -100px;
+// 	}
+// }
 
-@media screen and (max-width: 480px) {
-	.bl_influence_container .el_influence_point_ttl::before {
-		height: 70px;
-		top: -60px;
-		width: 140px;
-	}
-}
+// @media screen and (max-width: 480px) {
+// 	.bl_influence_container .el_influence_point_ttl::before {
+// 		height: 70px;
+// 		top: -60px;
+// 		width: 140px;
+// 	}
+// }
 
-.bl_influence_container:nth-of-type(1) .el_influence_point_ttl::before {
-	background-image: url(../../../public/assets/img/Influence/point01.png);
-}
-.bl_influence_container:nth-of-type(2) .el_influence_point_ttl::before {
-	background-image: url(../../../public/assets/img/Influence/point02.png);
-}
-.bl_influence_container:nth-of-type(3) .el_influence_point_ttl::before {
-	background-image: url(../../../public/assets/img/Influence/point03.png);
-}
+// .bl_influence_container:nth-of-type(1) .el_influence_point_ttl::before {
+// 	background-image: url(../../../public/assets/img/Influence/point01.png);
+// }
+// .bl_influence_container:nth-of-type(2) .el_influence_point_ttl::before {
+// 	background-image: url(../../../public/assets/img/Influence/point02.png);
+// }
+// .bl_influence_container:nth-of-type(3) .el_influence_point_ttl::before {
+// 	background-image: url(../../../public/assets/img/Influence/point03.png);
+// }
 
 .el_influence_point_txt {
+	font-weight: 300;
 	@include maxmq(sp) {
 		font-size: rem(14);
 		line-height: calc(24 / 12);
