--- a/development/scss/setting/_fontfamily.scss
+++ b/development/scss/setting/_fontfamily.scss
@@ -1,4 +1,4 @@
 // フォファミリー設定
 $fontfamily_ttl: "メイリオ", Meiryo,"ヒラギノ角ゴシック","Hiragino Sans","Hiragino Kaku Gothic ProN","ヒラギノ角ゴ ProN W3",sans-serif;
-$fontfamily_txt: "Noto Sans JP", sans-serif;
+$fontfamily_txt: "Noto Sans JP", sans-serif;;
 $fontfamily_en: "Damion", cursive;
