--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1538,6 +1538,8 @@ body.is_scrollRock {
   background-color: #fff;
   border: 1px solid #e5dfdf;
   border-radius: 40px;
+  font-size: 1.25rem;
+  font-weight: bold;
   line-height: 1.5em;
   padding: 32px 0;
   position: relative;
@@ -1918,27 +1920,27 @@ body.is_scrollRock {
 }
 
 .el_cmponent_ttl {
-  font-size: 1.5rem;
   margin-top: 212px;
+  width: 255px;
 }
 
 @media screen and (max-width: 600px) {
   .el_cmponent_ttl {
-    margin-top: 120px;
-    text-align: center;
+    margin: 120px auto 0;
+    width: 174px;
   }
 }
 
 .el_cmponent_subttl {
-  font-size: 2.1875rem;
   line-height: 1.5em;
   margin-top: 44px;
+  width: 383px;
 }
 
 @media screen and (max-width: 600px) {
   .el_cmponent_subttl {
-    font-size: 1.875rem;
-    text-align: center;
+    margin: 32px auto 0;
+    width: 288px;
   }
 }
 
