--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2130,15 +2130,32 @@ body.is_scrollRock {
 }
 
 .el_how_ttl {
-  font-size: 1.5rem;
+  margin: 0 auto;
   margin-top: 204px;
-  text-align: center;
+  position: relative;
+  width: 144px;
 }
 
 @media screen and (max-width: 600px) {
   .el_how_ttl {
     font-size: 1.125rem;
     margin-top: 114px;
+  }
+}
+
+.el_how_ttl::after {
+  content: url(../../../public/assets/img/how_to_use/ttl_sub.png);
+  position: absolute;
+  right: -110px;
+  top: -70px;
+}
+
+@media screen and (max-width: 600px) {
+  .el_how_ttl::after {
+    content: url(../../../public/assets/img/how_to_use/ttl_spsub.png);
+    position: absolute;
+    right: -60px;
+    top: -50px;
   }
 }
 
