--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2160,16 +2160,15 @@ body.is_scrollRock {
 }
 
 .el_how_subttl {
-  font-size: 2.5rem;
-  line-height: 1.5em;
+  margin: 0 auto;
   margin-top: 68px;
-  text-align: center;
+  width: 593px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 960px) {
   .el_how_subttl {
-    font-size: 1.875rem;
     margin-top: 54px;
+    width: 280px;
   }
 }
 
