--- a/development/scss/module/_questionnaire.scss
+++ b/development/scss/module/_questionnaire.scss
@@ -1,22 +1,35 @@
 .el_questionnaire_ttl {
-	font-size: rem(24);
 	@include maxmq(sp) {
-		font-size: rem(18);
 		margin-top: 114px;
 	}
-	margin-top: 160px;
-	text-align: center;
+	margin: 160px auto 0;
+	position: relative;
+	width: 265px;
 }
 
-.el_questionnaire_subttl {
-	font-size: rem(40);
-	@include maxmq(sp) {
-		font-size: rem(30);
-		margin-top: 54px;
+.el_questionnaire_ttl::after {
+	content: url(../../../public/assets/img/questionnaire/ttlsub.png);
+	position: absolute;
+	right: -110px;
+	top: -70px;
+}
+@include maxmq(sp) {
+	.el_questionnaire_ttl::after {
+		content: url(../../../public/assets/img/questionnaire/ttlsub_sp.png);
+		position: absolute;
+		right: -60px;
+		top: -50px;
 	}
-	line-height: 1.5em;
-	margin-top: 68px;
-	text-align: center;
+}
+
+
+.el_questionnaire_subttl {
+	@include maxmq(sp) {
+		margin-top: 54px;
+		width: 280px;
+	}
+	margin: 68px auto 0;
+	width: 656px;
 }
 
 .questionnaire_container {
