--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2224,29 +2224,42 @@ body.is_scrollRock {
 }
 
 .el_voice_ttl {
-  font-size: 1.5rem;
-  margin-top: 160px;
-  text-align: center;
+  margin: 160px auto 0;
+  position: relative;
+  width: 136px;
 }
 
 @media screen and (max-width: 600px) {
   .el_voice_ttl {
-    font-size: 1.125rem;
     margin-top: 114px;
   }
 }
 
+.el_voice_ttl::after {
+  content: url(../../../public/assets/img/voice/ttlsub.png);
+  position: absolute;
+  right: -80px;
+  top: -50px;
+}
+
+@media screen and (max-width: 600px) {
+  .el_questionnaire_ttl::after {
+    content: url(../../../public/assets/img/voice/ttlsub_sp.png);
+    position: absolute;
+    right: -60px;
+    top: -50px;
+  }
+}
+
 .el_voice_subttl {
-  font-size: 2.5rem;
-  line-height: 1.5em;
-  margin-top: 68px;
-  text-align: center;
+  margin: 68px auto 0;
+  width: 420px;
 }
 
 @media screen and (max-width: 600px) {
   .el_voice_subttl {
-    font-size: 1.875rem;
     margin-top: 54px;
+    width: 280px;
   }
 }
 
