--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2374,14 +2374,22 @@ body.is_scrollRock {
 }
 
 .el_question_ttl {
-  font-size: 2.5rem;
-  text-align: center;
+  margin: 150px auto 0;
+  position: relative;
+  width: 325px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 960px) {
   .el_question_ttl {
-    font-size: 1.875rem;
+    width: 240px;
   }
+}
+
+.el_question_ttl::after {
+  content: url(../../../public/assets/img/question/ttlsub.png);
+  position: absolute;
+  right: -50px;
+  top: -60px;
 }
 
 .ac_parent {
