--- a/development/scss/layout/_layout.scss
+++ b/development/scss/layout/_layout.scss
@@ -23,14 +23,11 @@
 
 .ly_fvBg {
 	align-items: center;
-	background-image: url(../../../public/assets/img/fv/fv.jpg);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
 	display: flex;
-	// height: 850px;
-	position: relative;
-	// padding-top: calc(850 / 1700 * 100%);
+	height: 100%;
+	left: 0;
+	position: absolute;
+	top: 0;
 	width: 100%;
 }
 
@@ -42,15 +39,15 @@
 	@include z-index(logo);
 	@include maxmq(sp) {
 		height: 116px;
-		left: -20px;
+		// left: -20px;
 		position: absolute;
-		top: -20px;
+		// top: -20px;
 		width: 116px;
 	}
 	justify-content: center;
-	left: -50px;
+	left: 0;
 	position: absolute;
-	top: -50px;
+	top: 0;
 	width: 211px;
 }
 
