--- a/development/scss/module/_fv.scss
+++ b/development/scss/module/_fv.scss
@@ -1,3 +1,16 @@
+.video {
+	// display: block;
+	height: auto;
+	left: 50%;
+	min-height: 100%;
+	min-width: 100%;
+	position: absolute;
+	top: 50%;
+	transform: translate(-50%,-50%);
+	width: auto;
+	z-index: -1;
+}
+
 .bl_fv_txt {
 	padding-left: 10%;
 }
